objects/Generic_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>API_Field_Name__c</fullName>
        <label>API Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Description__c</fullName>
        <label>Business Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Generic Mapping</label>
    <nameField>
        <label>Generic Mapping</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Generic Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>